# hydrochess

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: auto-release.yml  sprt-ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  SETUP.md
scripts/: elo_release.py
sprt/: .gitignore  README.md  apply_tuned_params.js  gen_dataset.js  native_runner.mjs  native_worker.mjs  package-lock.json  package.json  run_sprt_ci.js  sprt-native.mjs  sprt.js  spsa.mjs  spsa_config.mjs  texel_tuner.js  tuner.js
sprt/web/: index.html  main.js  sprt-worker.js  spsa-worker.js  spsa.html  variants.js
sprt/web/review/: index.html  review-main.js  review-worker.js
src/: attacks.rs  board.rs  evaluation.rs  game.rs  lib.rs  moves.rs  pieces.rs  search.rs  simd.rs  utils.rs
src/evaluation/: base.rs  eval_kind.rs  helpers.rs  insufficient_material.rs  mod.rs  mop_up.rs  pieces.rs
src/evaluation/variants/: chess.rs  confined_classical.rs  mod.rs  obstocean.rs  palace.rs  pawn_horde.rs
src/nnue/: features.rs  inference.rs  mod.rs  state.rs  tests.rs  weights.rs
src/search/: movegen.rs  noisy.rs  ordering.rs  params.rs  see.rs  shared_tt.rs  tt.rs  tt_defs.rs  zobrist.rs
src/tiles/: masks.rs  mod.rs
tests/: endgame_mates.rs  perft.rs  perft_icn.rs  repro_crash.rs  search_test.rs  static_eval_bench.rs
